--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,14 +15,17 @@
             color: white;
             -webkit-font-smoothing: antialiased;
         }
+
         h1, h2, h3, p {
             margin: 0;
             padding: 0;
         }
+
         a {
             text-decoration: none;
             color: white;
         }
+
         header {
             background-color: #1a1a1a;
             padding: 20px;
@@ -33,20 +37,24 @@
             z-index: 1000;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
         }
+
         header .logo h1 {
             font-size: 2rem;
             color: #1DB954;
             font-weight: 600;
         }
+
         header nav ul {
             list-style: none;
             display: flex;
             margin: 0;
             padding: 0;
         }
+
         header nav ul li {
             margin-left: 25px;
         }
+
         header nav ul li a {
             font-size: 1.1rem;
             color: #B3B3B3;
@@ -55,32 +63,38 @@
             transition: color 0.3s ease, background 0.3s ease;
             border-radius: 5px;
         }
+
         header nav ul li a:hover {
             color: #1DB954;
             background-color: rgba(255, 255, 255, 0.1);
         }
+
         .slogan {
             text-align: center;
             padding: 80px 20px;
             background: linear-gradient(135deg, #1f1f1f, #121212);
         }
+
         .slogan h2 {
             font-size: 2.8rem;
             color: #FFFFFF;
             font-weight: 600;
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
+
         .featured {
             padding: 50px 20px;
             text-align: center;
             background-color: #121212;
         }
+
         .featured h2 {
             font-size: 2.2rem;
             margin-bottom: 40px;
             font-weight: 600;
             color: #FFFFFF;
         }
+
         .artist-list {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -90,6 +104,7 @@
             max-width: 1200px;
             margin: 0 auto;
         }
+
         .artist {
             background-color: #1a1a1a;
             padding: 15px;
@@ -98,10 +113,12 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
         }
+
         .artist:hover {
             transform: translateY(-5px);
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
         }
+
         .artist img {
             width: 100%;
             border-radius: 8px;
@@ -109,16 +126,19 @@
             margin-bottom: 10px;
             display: block;
         }
+
         .artist h3 {
             font-size: 1.3rem;
             font-weight: 600;
             color: #FFFFFF;
             margin-bottom: 8px;
         }
+
         .artist p {
             color: #B3B3B3;
             font-size: 0.9rem;
         }
+
         footer {
             background-color: #1a1a1a;
             padding: 25px;
@@ -126,10 +146,44 @@
             margin-top: 60px;
             border-top: 1px solid #2a2a2a;
         }
+
         footer p {
             color: #B3B3B3;
             font-size: 1rem;
         }
+
+        .album-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 30px;
+            padding: 20px;
+            margin-top: 30px;
+            max-width: 1200px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .album {
+            background-color: #1a1a1a;
+            padding: 15px;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        .album iframe {
+            width: 100%;
+            height: 220px;
+            border: 0;
+            border-radius: 8px;
+        }
+
+        .counter {
+            color: #1DB954;
+            font-size: 1.2rem;
+            margin: 15px 0;
+            font-weight: 600;
+        }
+
         /* Modal Styles */
         .modal {
             display: none;
@@ -143,6 +197,7 @@
             justify-content: center;
             align-items: center;
         }
+
         .modal-content {
             background-color: #1a1a1a;
             padding: 30px;
@@ -151,10 +206,12 @@
             max-width: 500px;
             text-align: center;
         }
+
         .modal-content h2 {
             font-size: 1.8rem;
             margin-bottom: 20px;
         }
+
         .modal-content input, .modal-content textarea {
             width: 100%;
             padding: 10px;
@@ -165,6 +222,7 @@
             color: white;
             font-family: 'Poppins', sans-serif;
         }
+
         .modal-content button {
             background-color: #1DB954;
             color: white;
@@ -174,9 +232,11 @@
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
+
         .modal-content button:hover {
             background-color: #17a246;
         }
+
         .close {
             position: absolute;
             top: 15px;
@@ -185,15 +245,18 @@
             cursor: pointer;
             color: #B3B3B3;
         }
+
         /* Media Query for Smaller Screens */
         @media (max-width: 600px) {
             .artist-list {
                 grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
                 gap: 20px;
             }
+
             .artist h3 {
                 font-size: 1.2rem;
             }
+
             .artist p {
                 font-size: 0.85rem;
             }
@@ -248,6 +311,7 @@
             <h2>Song Request</h2>
             <form id="songRequestForm">
                 <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
                 <input type="text" placeholder="Artist Name" required>
                 <textarea placeholder="Song Title or Description" rows="4" required></textarea>
                 <button type="submit">Submit Request</button>
@@ -461,6 +525,7 @@
             
             // Get form values
             const name = this.querySelector('input[placeholder="Your Name"]').value;
+            const email = this.querySelector('input[placeholder="Your Email"]').value;
             const artist = this.querySelector('input[placeholder="Artist Name"]').value;
             const song = this.querySelector('textarea[placeholder="Song Title or Description"]').value;
 
@@ -475,6 +540,7 @@
                     color: 1942002, // Spotify green in decimal
                     fields: [
                         { name: "Name", value: name, inline: true },
+                        { name: "Email", value: email, inline: true },
                         { name: "Artist", value: artist, inline: false },
                         { name: "Song/Description", value: song, inline: false },
                         { name: "Timestamp", value: new Date().toLocaleString(), inline: false }
@@ -510,6 +576,6 @@
             document.getElementById(sectionId).scrollIntoView({ behavior: 'smooth' });
         }
     </script>
-
 </body>
 </html>
+
