--- a/index.html
+++ b/index.html
@@ -375,7 +375,8 @@
         const thrifeSongs = [
             {title: "Stress ft. Einár & Owen", src: "https://audiomack.com/embed/song/cs1-3/einar-x-owen-x-thrife-stress-oslappt-bast-kvalite"},
             {title: "Designer ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-desginer"},
-            {title: "Placeholder Track", src: "https://audiomack.com/embed/song/placeholder"} // Replace with real tracks
+            {title: "Welcome to the Party ft. Rami & 2Clock", src: "https://audiomack.com/embed/song/cs1-3/thrife-x-rami-x-2clock-welcome-to-the-party-oslappt"},
+            {title: "Placeholder Track", src: "https://audiomack.com/embed/song/placeholder"} // Replace with real tracks if needed
         ];
 
         function generateAlbumList(songs) {
@@ -409,7 +410,7 @@
             newTab.document.title = "UnreleasedSweden";
             newTab.document.write(`
                 <!DOCTYPE html>
-                <html lang="en…’>
+                <html lang="en">
                 <head>
                     <meta charset="UTF-8">
                     <meta name="viewport" content="width=device-width, initial-scale=1.0">
