--- a/index.html
+++ b/index.html
@@ -376,7 +376,8 @@
             {title: "Stress ft. Einár & Owen", src: "https://audiomack.com/embed/song/cs1-3/einar-x-owen-x-thrife-stress-oslappt-bast-kvalite"},
             {title: "Designer ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-desginer"},
             {title: "Welcome to the Party ft. Rami & 2Clock", src: "https://audiomack.com/embed/song/cs1-3/thrife-x-rami-x-2clock-welcome-to-the-party-oslappt"},
-            {title: "Placeholder Track", src: "https://audiomack.com/embed/song/placeholder"} // Replace with real tracks if needed
+            {title: "Placeholder Track", src: "https://audiomack.com/embed/song/placeholder"},
+            {title: "Welcome to the Party ft. Rami & 2Clock", src: "https://audiomack.com/embed/song/cs1-3/thrife-x-rami-x-2clock-welcome-to-the-party-oslappt"}
         ];
 
         function generateAlbumList(songs) {
