--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
             {title: "See You Later ft. Icekiid", src: "https://audiomack.com/embed/song/cs1-3/einar-x-icekiid-see-you-later"},
             {title: "Ha Ha Ha (Fuck Fame) ft. Adaam", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-adaam-ha-ha-ha-fuck-fame-hela-oslappt"},
             {title: "Mina Grabbar", src: "https://audiomack.com/embed/song/cs1-3/einar-mina-grabbar"},
+            {title: "Falla Ner", src: "https://audiomack.com/cs1-3/song/einar-c-1cuz-x-sarettii-falla-ner"}
             {title: "Designer ft. Thrife", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-desginer"}
         ];
 
