--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
             {title: "Stress ft. Owen & Thrife", src: "https://audiomack.com/embed/song/cs1-3/einar-x-owen-x-thrife-stress-oslappt-bast-kvalite"},
             {title: "Blåser Kallt ft. Dree Low", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-dree-low-blser-kallt"},
             {title: "See You Later ft. Icekiid", src: "https://audiomack.com/embed/song/cs1-3/einar-x-icekiid-see-you-later"},
+            {title: "Meckar En Kush", src: "{title: "Meckar en Kush ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-meckar-en-kush"}
             {title: "Ha Ha Ha (Fuck Fame) ft. Adaam", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-adaam-ha-ha-ha-fuck-fame-hela-oslappt"},
             {title: "Mina Grabbar", src: "https://audiomack.com/embed/song/cs1-3/einar-mina-grabbar"},
             {title: "Falla Ner", src: "https://audiomack.com/cs1-3/song/einar-c-1cuz-x-sarettii-falla-ner"}
