--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <p>Hip-Hop / Rap</p>
                 </div>
                 <div class="artist" onclick="openUnreleasedTab('owen')">
-                    <img src="https://imgs.search.brave.com/YwlLgg3hsbVBt3EzDYebUX2vL17Gt5hAH1d8jT5VsgQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pMS5z/bmRjZG4uY29tL2Fy/dHdvcmtzLXUzNlI4/SjVjbFJrYWcwbDQt/QnNVZzlRLXQxMDgw/eDEwODAuanBn" alt="Owen" loading="lazy">
+                    <img src="https://i.scdn.co/image/ab6761610000e5eb62c2ad0ccdc5d80e5db2a5b8" alt="Owen" loading="lazy">
                     <h3>Owen</h3>
                     <p>Hip-Hop / Rap</p>
                 </div>
@@ -340,6 +340,8 @@
             {title: "Sett Nånting", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-mpl-sett-nanting"},
             {title: "Centrum", src: "https://audiomack.com/embed/song/magmareaper4/einar-centrum"},
             {title: "GG PP ft. Moewgli & 5ifty", src: "https://audiomack.com/embed/song/cs1-3/einar-gg-pp-ft-moewgli-5ifty-oslappt"},
+            {title: "Wifi ft. Jireel", src: "https://audiomack.com/cs1-3/song/jireel-einar-wifi"}
+            {title: "CHernobyl", src: "https://audiomack.com/cs1-3/song/chernobyl-einar"}
             {title: "Annan Gang (Bäst Kvalité)", src: "https://audiomack.com/embed/song/cs1-3/einar-x-lelo-annan-gang-bast-kvalite-hela-oslappt"},
             {title: "Gangland ft. Aden", src: "https://audiomack.com/embed/song/cs1-3/aden-x-einr-gangland"},
             {title: "Tragic ft. 23 & 5iftyy", src: "https://audiomack.com/embed/song/cs1-3/einar-ft-23-5iftyy-tragic"},
@@ -357,10 +359,10 @@
             {title: "Stress ft. Owen & Thrife", src: "https://audiomack.com/embed/song/cs1-3/einar-x-owen-x-thrife-stress-oslappt-bast-kvalite"},
             {title: "Blåser Kallt ft. Dree Low", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-dree-low-blser-kallt"},
             {title: "See You Later ft. Icekiid", src: "https://audiomack.com/embed/song/cs1-3/einar-x-icekiid-see-you-later"},
-            {title: "Meckar En Kush", src: "{title: "Meckar en Kush ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-meckar-en-kush"}
+            {title: "Meckar En Kush ft. Thrife", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-meckar-en-kush"},
             {title: "Ha Ha Ha (Fuck Fame) ft. Adaam", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-adaam-ha-ha-ha-fuck-fame-hela-oslappt"},
             {title: "Mina Grabbar", src: "https://audiomack.com/embed/song/cs1-3/einar-mina-grabbar"},
-            {title: "Falla Ner", src: "https://audiomack.com/cs1-3/song/einar-c-1cuz-x-sarettii-falla-ner"}
+            {title: "Falla Ner ft. C1cuz & Sarettii", src: "https://audiomack.com/embed/song/cs1-3/einar-c-1cuz-x-sarettii-falla-ner"},
             {title: "Designer ft. Thrife", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-desginer"}
         ];
 
@@ -377,7 +379,8 @@
         const thrifeSongs = [
             {title: "Stress ft. Einár & Owen", src: "https://audiomack.com/embed/song/cs1-3/einar-x-owen-x-thrife-stress-oslappt-bast-kvalite"},
             {title: "Designer ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-desginer"},
-            {title: "Welcome to the Party ft. Rami & 2Clock", src: "https://audiomack.com/cs1-3/song/thrife-x-rami-x-2clock-welcome-to-the-party-oslappt"}
+            {title: "Welcome to the Party ft. Rami & 2Clock", src: "https://audiomack.com/embed/song/cs1-3/thrife-x-rami-x-2clock-welcome-to-the-party-oslappt"},
+            {title: "Meckar En Kush ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-meckar-en-kush"}
         ];
 
         function generateAlbumList(songs) {
