--- a/index.html
+++ b/index.html
@@ -360,7 +360,9 @@
             {title: "Ha Ha Ha (Fuck Fame) ft. Adaam", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-adaam-ha-ha-ha-fuck-fame-hela-oslappt"},
             {title: "Mina Grabbar", src: "https://audiomack.com/embed/song/cs1-3/einar-mina-grabbar"},
             {title: "Falla Ner ft. C1cuz & Sarettii", src: "https://audiomack.com/embed/song/cs1-3/einar-c-1cuz-x-sarettii-falla-ner"},
-            {title: "Designer ft. Thrife", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-desginer"}
+            {title: "Designer ft. Thrife", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-desginer"},
+            {title: "Freestyle ft. Dree Low & Madi Banja", src: "https://audiomack.com/embed/song/cs1-3/einar-dree-low-madi-banja-freestyle"},
+            {title: "Vi E Kvar", src: "https://audiomack.com/embed/song/cs1-3/einar-vi-e-kvar"}
         ];
 
         const owenSongs = [
@@ -370,13 +372,14 @@
 
         const dreeLowSongs = [
             {title: "What What ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/dree-low-ft-einar-what-what"},
-            {title: "Blåser Kallt ft. Einár", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-dree-low-blser-kallt"}
+            {title: "Blåser Kallt ft. Einár", src: "https://audiomack.com/embed/song/magmareaper4/einar-x-dree-low-blser-kallt"},
+            {title: "Freestyle ft. Einár & Madi Banja", src: "https://audiomack.com/embed/song/cs1-3/einar-dree-low-madi-banja-freestyle"}
         ];
 
         const thrifeSongs = [
             {title: "Stress ft. Einár & Owen", src: "https://audiomack.com/embed/song/cs1-3/einar-x-owen-x-thrife-stress-oslappt-bast-kvalite"},
             {title: "Designer ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-desginer"},
-            {title: "Welcome to the Party ft. Rami & 2Clock", src: "https://audiomack.com/cs1-3/song/thrife-x-rami-x-2clock-welcome-to-the-party-oslappt"},
+            {title: "Welcome to the Party ft. Rami & 2Clock", src: "https://audiomack.com/embed/song/cs1-3/thrife-x-rami-x-2clock-welcome-to-the-party-oslappt"},
             {title: "Meckar En Kush ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-meckar-en-kush"}
         ];
 
