--- a/index.html
+++ b/index.html
@@ -346,6 +346,9 @@
             {title: "SSM LS", src: "https://audiomack.com/embed/song/cs1-3/ssm-ls"},
             {title: "Va Säger Du Baby (Studio Kvalitet)", src: "https://audiomack.com/embed/song/cs1-3/einar-va-sager-du-baby-studio-kvalitet"},
             {title: "Para", src: "https://audiomack.com/embed/song/cs1-3/einar-para-oslappt"},
+            {title: "Freestyle ft. Dree Low & Madi Banja", src: "https://audiomack.com/embed/song/cs1-3/einar-dree-low-madi-banja-freestyle"},
+            {title: "Pop Smoke 2 ft. 5iftyy & Moewgli", src: "https://audiomack.com/embed/song/cs1-3/einar-5iftyy-moewgli-pop-smoke-2"},
+            {title: "Psykopater ft. Greekazo", src: "https://audiomack.com/embed/song/cs1-3/einar-x-greekazo-psykopater-official-oslappt-audio-sjuk-lat"}
             {title: "What What ft. Dree Low", src: "https://audiomack.com/embed/song/cs1-3/dree-low-ft-einar-what-what"},
             {title: "Steppa In", src: "https://audiomack.com/embed/song/magmareaper4/steppa-in-einr"},
             {title: "Kaos", src: "https://audiomack.com/embed/song/magmareaper4/einr-kaos"},
