--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         const thrifeSongs = [
             {title: "Stress ft. Einár & Owen", src: "https://audiomack.com/embed/song/cs1-3/einar-x-owen-x-thrife-stress-oslappt-bast-kvalite"},
             {title: "Designer ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-desginer"},
-            {title: "Welcome to the Party ft. Rami & 2Clock", src: "https://audiomack.com/embed/song/cs1-3/thrife-x-rami-x-2clock-welcome-to-the-party-oslappt"},
+            { "title": "Welcome to the Party (Osläppt)", "src": "https://audiomack.com/embed/song/magmareaper4/thrife-x-rami-x-2clock-welcome-to-the-party-oslappt" }
             {title: "Meckar En Kush ft. Einár", src: "https://audiomack.com/embed/song/cs1-3/einar-x-thrife-meckar-en-kush"}
         ];
 
